--- a/templates/home.html
+++ b/templates/home.html
@@ -5,8 +5,6 @@
   <h2>Welcome, {{ user.username }}!</h2>
   <h4>Your email is set to {{ user.email }} </h4>
   {% if request.user|has_group:"profs" %} 
-  	<div class="basic">
-		{% include "upload.html" %}    
-	</div>
+  <a href='qbank/ini'>upload questions</a>
 {% endif %}
 {% endblock %}
