--- a/templates/lview2 .html
+++ b/templates/lview2 .html
@@ -2,21 +2,21 @@
 <!DOCTYPE html>
     <html>
     <script type="text/javascript">
-    	function myf(){
-    		//alert('boo')
-    		window.location.href="{% url 'ltable' 'yell' %}"
-    		document.ff.submit();
-    	}
+        function myf(){
+            //alert('boo')
+            window.location.href="{% url 'ltable' 'yell' %}"
+            document.ff.submit();
+        }
     </script>
         <head>
-        	<form method="POST">
-        		{%csrf_token%}
-        	{{form.as_p}}
-        	<button type="submit" value="Submit">Sort</button></form>
-        	<p> Sorted by: {{cur}} </p>
+            <form method="POST">
+                {%csrf_token%}
+            {{form.as_p}}
+            <button type="submit" value="Submit">Sort</button></form>
+            <p> {{cur}} </p>
         </head>
         <body>
-            <table cellpadding="10">
+            <table>
                 <tr>
                     <th> Name </th>
                     <th> Marks </th>
@@ -25,7 +25,7 @@
                 {% for r in data %}
                 <tr>
                     <td> {{r.Name}}</td>
-                    <td> {{r.Marks | stringformat:"i"}}</td>
+                    <td> {{r.Total_Marks}}</td>
                     <td> {{r.Date}}</td>
                 </tr>
                 {% endfor %}
