--- a/templates/edit_add.html
+++ b/templates/edit_add.html
@@ -23,7 +23,7 @@
 <script type="text/javascript">
       function myf1(){
         //alert('boo')
-        window.location.href='home/'
+        window.location.href="{% url 'cv' %}"
         
       }
     </script>
