--- a/templates/qppage.html
+++ b/templates/qppage.html
@@ -2,11 +2,11 @@
 {% block content %}
 
     <script type="text/javascript">
-    	function myf(){
-    		//alert('boo')
-    		window.location.href="{% url 'ltable' %}"
-    		document.ff.submit();
-    	}
+        function myf(){
+            //alert('boo')
+            window.location.href="{% url 'ltable' %}"
+            document.ff.submit();
+        }
     </script>
     <h1>
         {{title}}
@@ -14,7 +14,7 @@
         
             <table cellpadding="10">
                 <tr>
-                    <th> Content 22 </th>
+                    <th> Content </th>
                     <th> Marks </th>
                     <th> Chapter </th>
                     <th> Section </th>
