--- a/templates/lview .html
+++ b/templates/lview .html
@@ -4,7 +4,7 @@
     <script type="text/javascript">
         function myf(){
             //alert('boo')
-            window.location.href="{% url 'ltable' 'yell' %}"
+            window.location.href="{% url 'ltable' %}"
             document.ff.submit();
         }
     </script>
