--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,20 +1,18 @@
-    <!DOCTYPE html>
-    <html>
+    {% extends "base_generic.html" %}
+{% block content %}
         <head>
             <title>Make Profile</title>
-            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         </head>
-        <body>
+    
             <center>
-                <div class="jumbotron">
+                <div >
                     <h2 class="display-4">Ini file upload</h2>
-                            {% block replace %}
                     <p class="lead">Upload ini file and specify the title</p>
-                    <hr class="my-4">
+                    
                     <form method="POST" enctype="multipart/form-data">
                         <!-- Very Important csrf Token -->
                         {% csrf_token %}
-                        <table>
+                        <table cellspacing="10">
                             {{ form.as_table }}
                         </table>
                         <br>
@@ -23,5 +21,17 @@
                
             </center>
             {% endblock %}
-        </body>
-    </html>
+      
+    {% block sidebar %}
+        <ul class="sidebar-nav">
+          <li><a href="{% url 'cv'%}">Question Banks</a>
+            <ul>
+                <li><a href="{% url 'ini' %}"> Upload Question Bank</a></li>
+            </ul>
+          </li>
+          <li><a href="{% url 'ltable'%}">Question Papers</a></li>
+           <ul>
+                <li><a href="{% url 'choose_frqp' %}"> Add Question Paper</a></li>
+            </ul>
+          </ul>
+     {% endblock %}
