--- a/qbank/templates/detail.html
+++ b/qbank/templates/detail.html
@@ -31,7 +31,15 @@
 
   	  {% block sidebar %}
         <ul class="sidebar-nav">
-          <li><a href='home/'>Home</a></li>
-          <li>Owner: {{ owner }}</li>
-        </ul>
+          <li><a href="{% url 'cv'%}">Question Banks</a>
+            <ul>
+                <li><a href="{% url 'ini' %}"> Upload Question Bank</a></li>
+            </ul>
+          </li>
+          <li><a href="{% url 'ltable'%}">Question Papers</a></li>
+           <ul>
+                <li><a href="{% url 'choose_frqp' %}"> Add Question Paper</a></li>
+            </ul>
+           <li><a href="{% url 'lv' %}"> All Questions</a></li>
+          </ul>
      {% endblock %}
