--- a/templates/email_change.html
+++ b/templates/email_change.html
@@ -1,5 +1,31 @@
+{% extends "base_generic.html" %}
+{% load crispy_forms_tags %}
+{%block content%}
 <form method="post">
   {% csrf_token %}
-  {{ form.as_p }}
+  {{ form | crispy }}
   <button type="submit">Save changes</button>
 </form>
+{% endblock %}
+
+{% block sidebar %}
+ <ul class="sidebar-nav">
+          <li style="list-style-type: none;"><h3>Hi {{user.username}}</h3></li>
+          <li><a href="{% url 'cv'%}">Question Banks</a>
+            <ul>
+                <li><a href="{% url 'ini' %}"> Upload Question Bank</a></li>
+            </ul>
+          </li>
+          <li><a href="{% url 'ltable'%}">Question Papers</a></li>
+           <ul>
+                <li><a href="{% url 'choose_frqp' %}"> Add Question Paper</a></li>
+            </ul>
+           <li><a href="{% url 'lv' %}"> All Questions</a></li>
+
+        <li><a href="{% url 'logout' %}">Logout</a></li>
+        
+        <li><a href="{% url 'change_password' %}">Change Password</a></li>
+        
+        <li><a href="{% url 'change_email'%}">Change Email</a></li>
+        </ul>
+     {% endblock %}
