--- a/templates/upload.html
+++ b/templates/upload.html
@@ -23,7 +23,8 @@
             {% endblock %}
       
     {% block sidebar %}
-        <ul class="sidebar-nav">
+       <ul class="sidebar-nav">
+          <li style="list-style-type: none;"><h3>Hi {{user.username}}</h3></li>
           <li><a href="{% url 'cv'%}">Question Banks</a>
             <ul>
                 <li><a href="{% url 'ini' %}"> Upload Question Bank</a></li>
@@ -33,5 +34,13 @@
            <ul>
                 <li><a href="{% url 'choose_frqp' %}"> Add Question Paper</a></li>
             </ul>
+           <li><a href="{% url 'lv' %}"> All Questions</a></li>
+
+        <li><a href="{% url 'logout' %}">Logout</a></li>
+        
+        <li><a href="{% url 'change_password' %}">Change Password</a></li>
+        
+        <li><a href="{% url 'change_email'%}">Change Email</a></li>
+        </ul>
           </ul>
      {% endblock %}
