--- a/templates/cardv.html
+++ b/templates/cardv.html
@@ -57,7 +57,7 @@ $("#context-menu a").on("click", function() {
   </div>
   <div class="card-body" id="{{bank.id}}">
     <blockquote class="blockquote mb-0" id="{{bank.id}}">
-      <p id="{{bank.id}}">Privileges: {{ bank.priv }}</p>
+      <p id="{{bank.id}}">Privileges: Master</p>
       <div class="dropdown-menu dropdown-menu-sm" id="context-menu">
           <a id="edf" class="dropdown-item" href="#">Edit</a>
           <a id="del" class="dropdown-item" href="#">Delete</a>
