--- a/templates/detail.html
+++ b/templates/detail.html
@@ -26,6 +26,7 @@
   <p><strong>Tags:</strong> {{ tags }}</p>  
   <p><strong>Chapter:</strong> {{ chap }}</p>
   <p><strong>Section:</strong> {{ sec }}</p>
+  <p><strong>Marks:</strong> {{ mar }}</p>
   {% if ism %}
   	<h3>Subquestions</h3>
   	{% for q in kid %}
